--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,5 +13,5 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World! I am a sad panda. Are you?" />
+        android:text="Hello World! I am a sad panda. Are you?" /> // coolt nu kan jag växla mellan olika projekt samt pusha direkt från studios
 </RelativeLayout>
