buttons test and movement

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context="com.example.morgan.WorldOfMikMog.Main">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:id="@+id/textView1" />
+
     <Button
         android:id="@+id/down"
         android:layout_width="wrap_content"
@@ -15,18 +25,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignLeft="@+id/up"
         android:layout_alignStart="@+id/up" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
-        android:id="@+id/textView1" />
 
     <Button
         android:id="@+id/left"
@@ -61,4 +59,18 @@
         android:layout_above="@+id/down"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp" />
+
+    <FrameLayout
+        android:id="@+id/frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <ImageView
+            android:id="@+id/player"
+            android:layout_width="28dp"
+            android:layout_height="43dp"
+            android:src="@drawable/bob"/>
+
+    </FrameLayout>
 </RelativeLayout>
