--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_splash_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.morgan.WorldOfMikMog.SplashScreen"
+    tools:context="com.example.morgan.WorldOfMikMog.splashScreen"
     android:gravity="center"
     android:orientation="vertical">
 
