--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -12,6 +12,29 @@
         android:layout_height="match_parent"
         android:layout_marginTop="0dp">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="MikMog Studios Presents:"
+        android:textSize="30sp"
+        android:textColor="#005c99"/>
+
+    <TableLayout
+        android:gravity="center_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="350dp">
+
+        <TableRow>
+
+
+        </TableRow>
+    </TableLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PLAY GAME"
+        android:layout_marginTop="10dp"
+        android:onClick="startGame"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
