--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -21,8 +21,7 @@
             android:layout_height="wrap_content"
             android:text="MikMog Studios Presents:"
             android:layout_weight="1"
-            android:gravity="left"
-            android:layout_marginLeft="16dp"
+            android:gravity="center"
             android:padding="2dp"
             android:textColor="#000"
             android:textSize="40px"
@@ -48,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginRight="2dp"
             android:layout_margin="0dp"
             android:layout_weight="1"
             android:layout_gravity="top"
@@ -73,7 +72,6 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="left"
-        android:layout_marginLeft="16dp"
         android:padding="2dp"
         android:text="Copyright by MikMog Studios"
         android:textColor="#000"
