--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -24,8 +24,13 @@
 
         <TableRow>
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/logo"/>
 
         </TableRow>
+
     </TableLayout>
     <Button
         android:layout_width="wrap_content"
