--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -36,7 +36,8 @@
                 android:src="@drawable/logo"
                 android:layout_gravity="center_horizontal"
                 android:padding="2dp"
-                android:layout_marginRight="16dp"/>
+                android:layout_marginRight="16dp"
+                android:layout_weight="2"/>
 
         <Button
             android:layout_width="wrap_content"
