fixed end picture error and made restart button centerd in parent

--- a/app/src/main/res/layout/activity_gameover.xml
+++ b/app/src/main/res/layout/activity_gameover.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background = "@drawable/end2">
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Restart"
-        android:onClick="restartGame"/>
-</LinearLayout>
+        android:layout_centerInParent="true"
+        android:text="Back to game"
+        android:onClick="restartGame"
+        android:id="@+id/button4"
+        style="@style/Widget.AppCompat.Button.Colored"/>
+</RelativeLayout>
