--- a/app/src/main/res/layout/activity_gameover.xml
+++ b/app/src/main/res/layout/activity_gameover.xml
@@ -3,13 +3,14 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background = "@drawable/end2">
+    android:background = "@drawable/end">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Back to game"
+        android:layout_alignParentRight="true"
+        android:layout_margin="10dp"
+        android:text="END"
         android:onClick="restartGame"
         android:id="@+id/button4"
         style="@style/Widget.AppCompat.Button.Colored"/>
