--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -44,7 +44,7 @@
             android:layout_weight="1"
             android:layout_gravity="top"
             android:padding="2dp"
-            android:text="PLAY GAME"
+            android:text="Start"
             android:onClick="startGame"
             android:id="@+id/button3"
             android:elevation="2dp"
